--- a/contacts.html
+++ b/contacts.html
@@ -51,12 +51,12 @@
         <hr style="border-top:1px solid #17202a;box-shadow:0 0 1px #17202a;"/>
         <div class="container">
           <h4 class="text-left"><b>Режим работы</b></h4>
-          <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam iaculis et ante porta pellentesque. Quisque ac eros sagittis nisi volutpat convallis. Maecenas eu faucibus justo, quis varius augue. Duis nibh ipsum, sodales id efficitur ut, venenatis non est.</p>
+          <p class="text-justify">Если вы желаете заказать кальяны или кальянщика на выезд на свое мероприятие, то оставте свою заявку отправив сообщение нам на почту. Заявки расссматриваются с 10.00 до 22.00 в течении часа.</p>
           <h4 class="text-left"><b>Контакты</b></h4>
           <p class="text-justify">
             <h5>Vkontakte : <a href="https://vk.com/shishaclubminsk" target="_blank">https://vk.com/shishaclubminsk</a></h5>
             <h5>Телефон : +375-29-185-34-61</h5>
-            <h5>E-mail : <a href="example@test.ru">example@test.ru</a></h5>
+            <h5>E-mail : <a href="example@test.ru">shishaclubminsk@gmail.com</a></h5>
           </p>
         </div>
       </section>
