--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <article class="col-lg-6 col-md-6 col-xs-12 col-sm-12 news">
           <h4>Header</h4>
           <img class="img-responsive" src="images/news-placeholder.jpg"/>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam iaculis et ante porta pellentesque. Quisque ac eros sagittis nisi volutpat convallis. Maecenas eu faucibus justo, quis varius augue. Duis nibh ipsum, sodales id efficitur ut, venenatis non est. Donec lectus erat, tempor at placerat a, malesuada ut odio. Maecenas cursus eu mi eget laoreet. Mauris eleifend egestas tempus. Sed efficitur laoreet enim, in ullamcorper libero fermentum at. Cras in nisi rutrum, pretium nisi sit amet, eleifend mauris. Phasellus fermentum lorem eu mi consectetur, non placerat neque rhoncus. Mauris porttitor euismod risus, id mattis mi vulputate eu. Sed tincidunt leo vestibulum erat fringilla, non commodo nibh facilisis. Curabitur tincidunt, dui quis consequat aliquam, ante urna pharetra elit, ac rhoncus mauris erat ut magna. Cras nunc tortor, malesuada id lorem at, elementum consectetur magna. </p>
+          <p>Сайт находится в тестовом режиме </p>
         </article>
         <article class="col-lg-6 col-md-6 col-xs-12 col-sm-12 news">
           <h4>Header</h4>
