--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Shisha Club</title>
+    <link rel="icon" 
+      type="image/png" 
+      href="images/logo.png">
+    
 
     <!-- My style -->
     <link href="css/main.css" rel="stylesheet">
