--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Shisha Club</title>
-    <link rel="icon" 
-      type="image/png" 
-      href="images/logo.png">
-    
 
     <!-- My style -->
     <link href="css/main.css" rel="stylesheet">
@@ -57,8 +53,11 @@
         </div>
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 description wow fadeInRight">
           <h3><b>Shisha Club Minsk</b></h3>
-          <p class="text-justify"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut lobortis libero nec libero dapibus, id congue velit consequat. Duis nec dolor nisl. Suspendisse id justo a lorem sagittis viverra. Aenean dignissim pharetra diam eu tempor. Curabitur in porta metus. Aenean porttitor est non scelerisque ultricies. Praesent tempus congue ex ac euismod. Aenean id suscipit enim. Quisque volutpat enim eros, sit amet hendrerit lacus pulvinar nec. Sed porttitor interdum vestibulum. Cras a orci suscipit, aliquam ex imperdiet, efficitur libero. Maecenas accumsan nulla in dolor hendrerit laoreet. Phasellus faucibus neque id maximus lacinia. Quisque ullamcorper porttitor ex, eget luctus enim gravida id. Fusce mi ipsum, luctus eu dolor id, tristique rutrum lectus. Suspendisse vel massa lorem.Ut eget mi a leo commodo efficitur et eget urna. Nullam in dui gravida, feugiat ex vitae, finibus urna. Vivamus venenatis tempor felis non sodales. Integer quis ex neque. Nam viverra enim urna, sed porta sapien porttitor in. Cras auctor vulputate enim ac porta. Pellentesque non volutpat lorem. Nullam ut metus est. Duis nisi velit, malesuada nec iaculis ut, varius quis eros. Vivamus facilisis quam ultricies erat blandit, vitae condimentum leo lacinia. Vestibulum ultricies vitae est tempus facilisis. In maximus efficitur nibh sit amet feugiat. Etiam at dui orci. Proin hendrerit erat dui, non scelerisque ex dapibus sed. In ac lorem felis.
+          <p class="text-justify"> Приветствуем вас на нашем сайте <b><small>SHISHAMINSKCLUB!</b></small> 
           </p>
+ <p class="text-justify">Наш сайт несет информативный характер, все подробности публикуются в нашей группе вконтакте. </p>
+ <p class="text-justify"><b><small>SHISHAMINSKCLUB</b></small> - это клуб любителей кальяна и культуры его курения. На этом сайте вы сможете найти необходимую информацию для себя относительно сферы нашей деятельности. У нас вы сможете заказать лучший кальян в городе и выезд к вам бесподобных кальянщиков: профессионалов своего дела.Также мы организуем встречи любителей кальяна, проводим мастер-классы, обзоры на кальяны и различные кальянные смеси.</p>
+<p class="text-justify">Если вам нравится культура курения кальяна, то наше сообщество <b><small>SHISHAMINSKCLUB</b></small> - лучший выбор.</p>
           <a href="services.html">
             <div class="button-fill grey">
               <div class="button-text">Узнать больше!</div>
@@ -69,9 +68,9 @@
         <h2 class="text-center"><b>Новости</b></h2>
         <hr style="border-top:1px solid #17202a;box-shadow:0 0 1px #17202a;"/>
         <article class="col-lg-6 col-md-6 col-xs-12 col-sm-12 news">
-          <h4>Header</h4>
-          <img class="img-responsive" src="images/news-placeholder.jpg"/>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam iaculis et ante porta pellentesque. Quisque ac eros sagittis nisi volutpat convallis. Maecenas eu faucibus justo, quis varius augue. Duis nibh ipsum, sodales id efficitur ut, venenatis non est. Donec lectus erat, tempor at placerat a, malesuada ut odio. Maecenas cursus eu mi eget laoreet. Mauris eleifend egestas tempus. Sed efficitur laoreet enim, in ullamcorper libero fermentum at. Cras in nisi rutrum, pretium nisi sit amet, eleifend mauris. Phasellus fermentum lorem eu mi consectetur, non placerat neque rhoncus. Mauris porttitor euismod risus, id mattis mi vulputate eu. Sed tincidunt leo vestibulum erat fringilla, non commodo nibh facilisis. Curabitur tincidunt, dui quis consequat aliquam, ante urna pharetra elit, ac rhoncus mauris erat ut magna. Cras nunc tortor, malesuada id lorem at, elementum consectetur magna.</p>
+          <h4>Конкурс</h4>
+          <img class="img-responsive" src="images/487x487_tanya_ananeva_tanyaananevagmailcom_4_5.jpg"/>
+          <p>Проводим розыгрыш кальяна и комплектующих к нему. Условия розыгрыша:</p><p> 1)вступить в нашу группу вконтакте <a href="https://vk.com/shishaclubminsk"> нажать</a> </p><p>2)сделать репост записи с розыгрышем</p> <p>3)запись должна быть не ниже 5ой на стене</p> <p>4)страничка вконтакте должна быть настоящей (не фейк)</p> <p>5)проживать в городе Минск.</p><p>Розыгрыш будет проведен 29.10.2016  </p>
         </article>
         <article class="col-lg-6 col-md-6 col-xs-12 col-sm-12 news">
           <h4>Header</h4>
