--- a/reviews.html
+++ b/reviews.html
@@ -52,45 +52,15 @@
         <hr style="border-top:1px solid #17202a;box-shadow:0 0 1px #17202a;"/>
         <div class="container">
           <figure class="wow bounceIn">
-            <h4>Customer</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam iaculis et ante porta pellentesque. Quisque ac eros sagittis nisi volutpat convallis. Maecenas eu faucibus justo, quis varius augue. Duis nibh ipsum, sodales id efficitur ut, venenatis non est.
+            <h4>Роман</h4>
+            <p>Заказал кальян на дом, был приятно удивлен 50процентной скидкой, сделанной мне как первому клиенту =)
             </p>
           </figure>
           <figure class="wow bounceIn">
-            <h4>Customer</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam iaculis et ante porta pellentesque. Quisque ac eros sagittis nisi volutpat convallis. Maecenas eu faucibus justo, quis varius augue. Duis nibh ipsum, sodales id efficitur ut, venenatis non est.
+            <h4>Администратор</h4>
+            <p>Роман, спасибо за положительный отзыв, рады стараться для вас.
             </p>
-          </figure>
-          <figure class="wow bounceIn">
-            <h4>Customer</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam iaculis et ante porta pellentesque. Quisque ac eros sagittis nisi volutpat convallis. Maecenas eu faucibus justo, quis varius augue. Duis nibh ipsum, sodales id efficitur ut, venenatis non est.
-            </p>
-          </figure>
-          <figure class="wow bounceIn">
-            <h4>Customer</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam iaculis et ante porta pellentesque. Quisque ac eros sagittis nisi volutpat convallis. Maecenas eu faucibus justo, quis varius augue. Duis nibh ipsum, sodales id efficitur ut, venenatis non est.
-            </p>
-          </figure>
-          <figure class="wow bounceIn">
-            <h4>Customer</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam iaculis et ante porta pellentesque. Quisque ac eros sagittis nisi volutpat convallis. Maecenas eu faucibus justo, quis varius augue. Duis nibh ipsum, sodales id efficitur ut, venenatis non est.
-            </p>
-          </figure>
-          <figure class="wow bounceIn">
-            <h4>Customer</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam iaculis et ante porta pellentesque. Quisque ac eros sagittis nisi volutpat convallis. Maecenas eu faucibus justo, quis varius augue. Duis nibh ipsum, sodales id efficitur ut, venenatis non est.
-            </p>
-          </figure>
-          <figure class="wow bounceIn">
-            <h4>Customer</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam iaculis et ante porta pellentesque. Quisque ac eros sagittis nisi volutpat convallis. Maecenas eu faucibus justo, quis varius augue. Duis nibh ipsum, sodales id efficitur ut, venenatis non est.
-            </p>
-          </figure>
-          <figure class="wow bounceIn">
-            <h4>Customer</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam iaculis et ante porta pellentesque. Quisque ac eros sagittis nisi volutpat convallis. Maecenas eu faucibus justo, quis varius augue. Duis nibh ipsum, sodales id efficitur ut, venenatis non est.
-            </p>
-          </figure>
+<p class="text-justify"><a href="example@test.ru">Написать отзыв</a>         
         </div>
       </section>
       <!--CONTENT-->
