--- a/services.html
+++ b/services.html
@@ -49,27 +49,28 @@
         <h2 class="text-center"><b>Услуги</b></h2>
         <div class="container">
         <article>
-          <h3>Service 1 Name</h3>
+          <h3>Выезд кальянщика</h3>
           <hr style="border-top:1px solid #17202a;box-shadow:0 0 1px #17202a;"/>
           <div class="container text-justify">
             <img class="col-md-3" src="images/placeholder.jpg" />
-            <p class="col-md-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam iaculis et ante porta pellentesque. Quisque ac eros sagittis nisi volutpat convallis. Maecenas eu faucibus justo, quis varius augue. Duis nibh ipsum, sodales id efficitur ut, venenatis non est. Donec lectus erat, tempor at placerat a, malesuada ut odio. Maecenas cursus eu mi eget laoreet. Mauris eleifend egestas tempus. Sed efficitur laoreet enim, in ullamcorper libero fermentum at. Cras in nisi rutrum, pretium nisi sit amet, eleifend mauris. Phasellus fermentum lorem eu mi consectetur, non placerat neque rhoncus.</p>
-          </div>
+            <p class="col-md-9">Выезд кальянщика на мероприятия. Если вы хотите устроить вечеринку или банкет, но нету возможности самому сделать кальян - мы с радостью пришлем кальянщика. В наличие имеется множество различных разновидностей и марок кальянов,также наши кальянщики делают забивку на любых табаках, чашах, фруктах и разных комплектующих. </p>
+         <p class="col-md-9">  Отправить заявку можно на наш email также по номеру +375(29)-185-34-61.
+        </div>
         </article>
         <article>
-          <h3>Service 2 Name</h3>
+          <h3>Организация мероприятий</h3>
           <hr style="border-top:1px solid #17202a;box-shadow:0 0 1px #17202a"/>
           <div class="container text-justify">
             <img class="col-md-3" src="images/placeholder.jpg" />
-            <p class="col-md-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam iaculis et ante porta pellentesque. Quisque ac eros sagittis nisi volutpat convallis. Maecenas eu faucibus justo, quis varius augue. Duis nibh ipsum, sodales id efficitur ut, venenatis non est. Donec lectus erat, tempor at placerat a, malesuada ut odio. Maecenas cursus eu mi eget laoreet. Mauris eleifend egestas tempus. Sed efficitur laoreet enim, in ullamcorper libero fermentum at. Cras in nisi rutrum, pretium nisi sit amet, eleifend mauris. Phasellus fermentum lorem eu mi consectetur, non placerat neque rhoncus.</p>
+            <p class="col-md-9">Организовываем мероприятия по мастер-классам. В мероприятиях такого рода может принять участие каждый. Победителям таких мероприятий мы вручаем призы. </p>
           </div>
         </article>
         <article>
-          <h3>Service 3 Name</h3>
+          <h3>Аренда кальянов</h3>
           <hr style="border-top:1px solid #17202a;box-shadow:0 0 1px #17202a"/>
           <div class="container text-justify">
             <img class="col-md-3" src="images/placeholder.jpg" />
-            <p class="col-md-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam iaculis et ante porta pellentesque. Quisque ac eros sagittis nisi volutpat convallis. Maecenas eu faucibus justo, quis varius augue. Duis nibh ipsum, sodales id efficitur ut, venenatis non est. Donec lectus erat, tempor at placerat a, malesuada ut odio. Maecenas cursus eu mi eget laoreet. Mauris eleifend egestas tempus. Sed efficitur laoreet enim, in ullamcorper libero fermentum at. Cras in nisi rutrum, pretium nisi sit amet, eleifend mauris. Phasellus fermentum lorem eu mi consectetur, non placerat neque rhoncus.</p>
+            <p class="col-md-9">Сдаем большое количество кальянов в аренду, предоставляем особые условия для юридических лиц, заинтересованных в аренде большого количества кальянов.</p>
           </div>
         </article>
         </div>
