--- a/partners.html
+++ b/partners.html
@@ -52,14 +52,14 @@
         <div class="container">
           <h4 class="text-left">Преимущества работы с нами:</h4>
           <ul class="text-left" style="padding-bottom:15px;">
-            <li>Lorem Ipsum</li>
-            <li>Lorem Ipsum</li>
-            <li>Lorem Ipsum</li>
-            <li>Lorem Ipsum</li>
-            <li>Lorem Ipsum</li>
+            <li>Мы всегда рады новым идеям и предложениям</li>
+            <li>Качество работы с клиентами Московского уровня</li>
+            <li>Полная легальность</li>
+            <li>Поддержка партнеров в социальных сетях</li>
+            <li>Дружный коллектив</li>
           </ul>
           <h4 class="text-left">Как стать нашим партнером?</h4>
-          <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam iaculis et ante porta pellentesque. Quisque ac eros sagittis nisi volutpat convallis. Maecenas eu faucibus justo, quis varius augue. Duis nibh ipsum, sodales id efficitur ut, venenatis non est. Donec lectus erat, tempor at placerat a, malesuada ut odio. Maecenas cursus eu mi eget laoreet. Mauris eleifend egestas tempus. Sed efficitur laoreet enim, in ullamcorper libero fermentum at. Cras in nisi rutrum, pretium nisi sit amet, eleifend mauris. Phasellus fermentum lorem eu mi consectetur, non placerat neque rhoncus.</p>
+          <p class="text-justify">Если вы учредитель или управляющий заведения общественного питания или учреждения развлекательного характера, организатор мероприятий и т.п. пишите свои предложения по сотрудничеству на наш email. </p>
         </div>
         <a href="contacts.html">
             <div class="button-fill grey">
