--- a/reviews.html
+++ b/reviews.html
@@ -71,7 +71,7 @@
             <a href="https://vk.com/shishaclubminsk" target="_blank">
               <i class="fa fa-vk" aria-hidden="true"></i>
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/shishaclubminsk">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
             +375-29-185-34-61 
