--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <article class="col-lg-6 col-md-6 col-xs-12 col-sm-12 news">
           <h4>Конкурс</h4>
           <img class="img-responsive" src="images/487x487_tanya_ananeva_tanyaananevagmailcom_4_5.jpg"/>
-          <p>Проводим розыгрыш кальяна и комплектующих к нему. Условия розыгрыша:</p><ul> <li> Вступить в нашу группу вконтакте <a href="https://vk.com/shishaclubminsk"> нажать</a> </li><li> Сделать репост записи с розыгрышем</li> <li> Запись должна быть не ниже 5ой на стене</li> <li> Cтраничка вконтакте должна быть настоящей (не фейк)</li> <li> Проживать в городе Минск.</li></ul> <br/><p>Розыгрыш будет проведен 29.10.2016  </p>
+          <p>Проводим розыгрыш кальяна и комплектующих к нему. Условия розыгрыша:</p><ul> <li> Вступить в нашу группу вконтакте <a href="https://vk.com/shishaclubminsk"> нажать</a> </li><li> Сделать репост записи с розыгрышем</li> <li> Запись должна быть не ниже 5ой на стене</li> <li> Cтраничка вконтакте должна быть настоящей (не фейк)</li> <li> Проживать в городе Минск.</li></ul><p style="padding-top:5px;">Розыгрыш будет проведен 29.10.2016  </p>
         </article>
         <article class="col-lg-6 col-md-6 col-xs-12 col-sm-12 news">
           <h4>Header</h4>
