--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Shisha Club: Контакты</title>
+    <link rel="icon" 
+      type="image/png" 
+      href="images/logo.png">
 
     <link href="css/main.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
@@ -56,7 +59,7 @@
           <p class="text-justify">
             <h5>Vkontakte : <a href="https://vk.com/shishaclubminsk" target="_blank">https://vk.com/shishaclubminsk</a></h5>
             <h5>Телефон : +375-29-185-34-61</h5>
-            <h5>E-mail : <a href="example@test.ru">shishaclubminsk@gmail.com</a></h5>
+            <h5>E-mail : <a href="mailto:example@test.ru">shishaclubminsk@gmail.com</a></h5>
           </p>
         </div>
       </section>
