--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Shisha Club</title>
 
     <!-- My style -->
+    <link rel="icon" 
+      type="image/png" 
+      href="images/logo.png">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
     <!-- Bootstrap -->
