--- a/partners.html
+++ b/partners.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Shisha Club: Услуги</title>
-
+    <link rel="icon" 
+      type="image/png" 
+      href="images/logo.png">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
     <!-- Bootstrap -->
