--- a/reviews.html
+++ b/reviews.html
@@ -8,6 +8,9 @@
     <title>Shisha Club: Отзывы</title>
 
     <!-- My style -->
+    <link rel="icon" 
+      type="image/png" 
+      href="images/logo.png">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
     <!-- Bootstrap -->
@@ -60,7 +63,7 @@
             <h4>Администратор</h4>
             <p>Роман, спасибо за положительный отзыв, рады стараться для вас.
             </p>
-<p class="text-justify"><a href="example@test.ru">Написать отзыв</a>         
+<p class="text-justify"><a href="mailto:example@test.ru">Написать отзыв</a>         
         </div>
       </section>
       <!--CONTENT-->
