--- a/services.html
+++ b/services.html
@@ -54,7 +54,7 @@
           <h3>Выезд кальянщика</h3>
           <hr style="border-top:1px solid #17202a;box-shadow:0 0 1px #17202a;"/>
           <div class="container text-justify">
-            <img class="col-md-3" src="images/placeholder.jpg" />
+            <img class="col-md-3" src="images/2259922367.png" />
             <p class="col-md-9">Выезд кальянщика на мероприятия. Если вы хотите устроить вечеринку или банкет, но нету возможности самому сделать кальян - мы с радостью пришлем кальянщика. В наличие имеется множество различных разновидностей и марок кальянов,также наши кальянщики делают забивку на любых табаках, чашах, фруктах и разных комплектующих. </p>
          <p class="col-md-9">  Отправить заявку можно на наш email также по номеру +375(29)-185-34-61.
         </div>
