--- a/services.html
+++ b/services.html
@@ -63,7 +63,7 @@
           <h3>Организация мероприятий</h3>
           <hr style="border-top:1px solid #17202a;box-shadow:0 0 1px #17202a"/>
           <div class="container text-justify">
-            <img class="col-md-3" src="images/placeholder.jpg" />
+            <img class="col-md-3" src="images/party.jpg" />
             <p class="col-md-9">Организовываем мероприятия по мастер-классам. В мероприятиях такого рода может принять участие каждый. Победителям таких мероприятий мы вручаем призы. </p>
           </div>
         </article>
