--- a/services.html
+++ b/services.html
@@ -71,7 +71,7 @@
           <h3>Аренда кальянов</h3>
           <hr style="border-top:1px solid #17202a;box-shadow:0 0 1px #17202a"/>
           <div class="container text-justify">
-            <img class="col-md-3" src="images/placeholder.jpg" />
+            <img class="col-md-3" src="images/41106665_w640_h640_9b7vnl2mjmu.jpg" />
             <p class="col-md-9">Сдаем большое количество кальянов в аренду, предоставляем особые условия для юридических лиц, заинтересованных в аренде большого количества кальянов.</p>
           </div>
         </article>
